--- a/css/style.css
+++ b/css/style.css
@@ -590,6 +590,10 @@ a {
     align-self: center;
   }
 
+  .product__button:hover {
+    cursor: pointer;
+  }
+
 .footer-wrap {
     width: 1200px;
     padding: 0 15px 40px;
