--- a/css/style.css
+++ b/css/style.css
@@ -1062,6 +1062,7 @@ width: 100%;
   flex-wrap: wrap;
   width: 100%;
   padding: 0px 15px 40px;
+  justify-content: center;
 }
 
 .product {
@@ -1078,9 +1079,6 @@ width: 100%;
   width: 100%;
   }
 
-.popup {
-  max-width: 320px;
-}  
 
 .section-title-container-popup {
     padding: 20px 0 20px;
