--- a/css/style.css
+++ b/css/style.css
@@ -1110,6 +1110,10 @@ width: 100%;
     margin-right: 7px;
   }
 
+  .form-popup {
+    max-width: 320px;
+  }
+
 .popup-radio-option {
     margin-right: 30px;
   }
@@ -1122,5 +1126,21 @@ width: 100%;
 @media (max-width: 640px) and  (orientation: landscape) {
   .trends {
     width: calc(50% - 1px);
+  }
+}
+
+
+@media (max-height: 567px) {
+  .form-popup {
+    max-height: 100%;
+  }
+  .popup-close {
+    top: 0;
+    background-color: rgb(148, 148, 148);
+  }
+
+  .popup-textarea {
+    min-height: 60px;
+    max-height: 60px;
   }
 }
