--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 @font-face {
     font-family: 'OpenSans';
     src: url(../fonts/OpenSans-Regular.woff);
+    src: url(../fonts/OpenSans-Regular.woff2);
+    src: url(../fonts/OpenSans-Regular.ttf);
     font-weight: 400;
     font-style: normal;
 }
@@ -14,6 +16,8 @@
 @font-face {
     font-family: 'OpenSans';
     src: url(../fonts/OpenSans-Bold.woff);
+    src: url(../fonts/OpenSans-Bold.woff2);
+    src: url(../fonts/OpenSans-Bold.ttf);
     font-weight: 700;
     font-style: normal;
 }
@@ -652,7 +656,6 @@ a {
 
 .popup {
     position: fixed;
-    display: none;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -676,7 +679,10 @@ a {
   .section-title-container-popup {
     height: auto;
     padding: 50px 0 30px;
+    margin-left: auto;
+    margin-right: auto;
   }
+
   .popup-close {
     position: absolute;
     content: "";
@@ -696,7 +702,7 @@ a {
     display: block;
     margin-bottom: 5px;
     font-size: 13px;
-    font-weight: 400;
+    font-weight: regular;
   }
   
   .feedback-select {
@@ -749,7 +755,7 @@ a {
     margin-right: 5px;
   }
   
-  .popup-form-radioname:checked ~ .radio-var:before {
+  .popup-form-radioname:checked ~ .radio-option:before {
     background-image: url(../svg/form-circle.svg);
   }
   
@@ -771,11 +777,9 @@ a {
     max-height: 130px;
     background-color: #f4f7f6;
     border: none;
-    padding: 15px 0 0 15px;
-    outline-color: #b59f5b;
-    outline-offset: -1px;
-    resize: none;
-  }
+    padding: 15px;
+ }
+
   .popup-textarea:focus {
     outline: 1px solid #b59f5b;
     outline-offset: -1px;
@@ -789,7 +793,7 @@ a {
     color: #ffffff;
     text-transform: uppercase;
     font-size: 14px;
-    font-weight: 700;
+    font-weight: bold;
     border: none;
     cursor: pointer;
   }
@@ -1086,7 +1090,7 @@ width: 100%;
   }
 
 .form-popup {
-    max-height: 85%;
+    max-width: 320px;
     margin-left: 15px;
     margin-right: 15px;
     padding: 0 25px;
@@ -1131,9 +1135,7 @@ width: 100%;
 
 
 @media (max-height: 567px) {
-  .form-popup {
-    max-height: 100%;
-  }
+  
   .popup-close {
     top: 0;
     background-color: rgb(148, 148, 148);
