--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ body {
     background-repeat: no-repeat;
     position: relative;
     z-index: 0;
+    justify-content: center;
   }
   
   .trends-garden {
